# scroll_pedal

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  button.c  button.h  hid_pedal.c  hid_pedal.h  hw_config.h  led.c  led.h  main.c  power.c  power.h
